--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -29,5 +29,6 @@
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-08-20">Bangni邦尼 - 柊舞缇娜</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%BA%A6%E5%B0%94-84P5V-816MB-08-20">Bangni邦尼 - 约尔 [84P5V-816MB]</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%B2%89%E8%89%B2%E5%85%94%E5%85%94-102P-582MB-08-20">Bangni邦尼 - 粉色兔兔 [102P-582MB]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%9D%80%E6%88%AE%E9%83%BD%E5%B8%82-%E4%B8%8B%E5%B9%B3%E7%8E%B2%E8%8A%B1-98P6V-173GB-08-20">Bangni邦尼 - 杀戮都市 下平玲花 [98P6V-1.73GB]</a></p>
 </body>
 </html>
