--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -15,5 +15,14 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E8%90%8D%E8%90%8D-76P-509MB-08-19">Natsuko夏夏子 黑神话悟空 萍萍 [76P-509MB]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D52P-453M-08-20">Natsuko夏夏子 - 碧蓝航线 阿尔比恩旗袍[52P-453M]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88%E5%A5%B3%E4%BB%86%E5%90%8C%E4%BA%BA-70P346MB-08-20">Natsuko夏夏子 - 濑明日奈女仆同人 70P346MB</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%B0%8F%E6%98%A5%E6%97%A5%E5%92%8C-51P1V-761MB-08-20">Natsuko夏夏子 - 小春日和 [51P1V-761MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%99%BD%E5%A4%A9%E8%9B%BE61P-494MB-08-20">Natsuko夏夏子 - 白天蛾[61P-494MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E9%BB%91%E8%9D%B4%E8%9D%B6-62P1V751MB-08-20">Natsuko夏夏子 - 黑蝴蝶 62P1V751MB</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%B4%AB%E7%BD%97%E5%85%B043P5V-410MB-08-20">Natsuko夏夏子 - 紫罗兰[43P5V-410MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E6%BA%90%E8%B5%96%E5%85%89-%E5%83%B5%E5%B0%B8%E5%90%8C%E4%BA%BA-51P-409MB-08-20">Natsuko夏夏子 - 源赖光 僵尸同人 [51P-409MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%A5%B3%E7%A5%9E%E5%BC%82%E9%97%BB%E5%BD%955-%E9%AB%98%E5%8D%B7%E6%9D%8F50P-350MB-08-20">Natsuko夏夏子 - 女神异闻录5 高卷杏[50P-350MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%8D%A1%E8%8A%99%E5%8D%A1%E7%9D%A1%E8%A1%A334P6V-377MB-08-20">Natsuko夏夏子 - 卡芙卡睡衣[34P6V-377MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---Nikke%E6%99%AE%E4%B8%BD%E7%93%A6%E8%92%82-64P-475MB-08-20">Natsuko夏夏子 - Nikke普丽瓦蒂 [64P-475MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%BB%91%E5%B8%A6%E7%89%B9%E5%B7%A5-40P-346MB-08-20">Natsuko夏夏子 - 绑带特工 [40P-346MB]</a></p>
 </body>
 </html>
