--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -20,5 +20,8 @@
   <p><a href="https://telegra.ph/Byoru---Miia-08-20">Byoru - Miia</a></p>
   <p><a href="https://telegra.ph/Byoru---Yumeko-Jabami-08-20">Byoru - Yumeko Jabami</a></p>
   <p><a href="https://telegra.ph/Byoru---Cinderella-08-20">Byoru - Cinderella</a></p>
+  <p><a href="https://telegra.ph/Byoru---Momo-Ayase-08-20">Byoru - Momo Ayase</a></p>
+  <p><a href="https://telegra.ph/Byoru---Xmas-Gal-08-20">Byoru - Xmas Gal</a></p>
+  <p><a href="https://telegra.ph/Byoru---Mavuika-08-20">Byoru - Mavuika</a></p>
 </body>
 </html>
