--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -24,5 +24,6 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%BB%BF%E9%87%8E%E4%BB%99%E8%B8%AA-08-20">yuuhui玉汇 - 绿野仙踪</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%86%AC%E6%97%A5%E7%94%9C%E5%BF%83-08-20">yuuhui玉汇 - 冬日甜心</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%96%84%E8%B4%A2%E5%A8%98%E5%AD%90124P-455M-%E6%B1%89%E6%9C%8D-08-20">yuuhui玉汇 - 善财娘子[124P 455M] （汉服）</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%8D%87%E8%88%B1%E6%9C%8D%E5%8A%A1-128P-2V-08-20">yuuhui玉汇 - 升舱服务 [128P 2V]</a></p>
 </body>
 </html>
