--- a/咬一口兔娘全集/menu.html
+++ b/咬一口兔娘全集/menu.html
@@ -35,5 +35,11 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---1%E6%9C%88%E4%BD%9C%E5%93%81%E4%B8%9D%E7%BB%92%E7%B2%89%E9%BB%9B85PVideo%E5%B0%8F%E8%88%9E%E8%B9%88-08-20">咬一口兔娘 - 1月作品『丝绒粉黛』85P+Video+小舞蹈</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98-1%E6%9C%88%E4%BD%9C%E5%93%81%E5%87%A4%E5%87%B0%E4%B9%8B%E8%88%9E-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E74P1V-%E9%95%BF%E5%AE%89%E5%9F%8E-08-20">咬一口兔娘 1月作品『凤凰之舞-不知火舞』74P+1V 长安城</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---1%E6%9C%88%E4%BD%9C%E5%93%81%E5%B8%83%E9%81%93%E5%9C%A3%E5%A5%B372P1V-Abracadabra%E5%82%B2%E6%85%A2%E6%89%AD%E8%83%AF%E8%88%9E-1%E6%9C%8811%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-20">咬一口兔娘 - 1月作品『布道圣女』72P+1V Abracadabra·傲慢扭胯舞 （1月11打赏群资源</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E5%9C%B0%E9%93%81%E8%90%8C%E5%A6%B9164P1V-%E6%81%8B%E7%88%B1%E5%BE%AA%E7%8E%AF-08-20">咬一口兔娘 - 12月作品『地铁萌妹』164P+1V 恋爱循环</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E5%9C%B0%E9%93%81%E8%90%8C%E5%A6%B9164P1V-%E6%81%8B%E7%88%B1%E5%BE%AA%E7%8E%AF-08-20-2">咬一口兔娘 - 12月作品『地铁萌妹』164P+1V 恋爱循环 2</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E7%8B%BC%E7%9A%84%E8%AF%B1%E6%83%9162P12%E6%9C%8830%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-20">咬一口兔娘 - 12月月票特典『狼的诱惑』62P</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E8%BE%90%E5%B0%84-%E7%81%B0%E7%83%AC%E4%BD%99%E7%94%9F74P1V-So-Crazy-08-20">咬一口兔娘 - 12月作品『辐射-灰烬余生』74P+1V So Crazy</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---%E8%AF%9E%E7%94%9F%E6%97%A5%E9%99%90%E5%AE%9A%E5%85%94%E5%AD%90%E5%91%B3%E8%9B%8B%E7%B3%95113P-3V-08-20">咬一口兔娘 - 诞生日限定『兔子味蛋糕』113P +3V</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E5%85%94%E5%85%94%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9101P1Video1V%E5%B0%8F%E8%88%9E%E8%B9%88-08-20">咬一口兔娘 - 12月作品『兔兔圣诞礼物』101P+1Video+1V小舞蹈</a></p>
 </body>
 </html>
