--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%BE%9C-172P2V-158G-08-19">麻花酱 - 澜 [172P+2V-1.58G]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%BE%99%E5%8D%8E%E5%A6%83%E5%92%B2-08-19">麻花酱 蔚蓝档案 龙华妃咲</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%98%A5%E6%9F%93-08-19">麻花酱 - 春染</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%86%AC%E6%97%A5%E7%B3%BB%E5%88%97-119P-6V-08-20">麻花麻花酱 - 冬日系列 [119P 6V]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1---%E9%BB%91%E4%B8%9DJK%E5%90%88%E9%9B%86-127P-5V-08-20">麻花麻花酱 - 黑丝JK合集 [127P 5V]</a></p>
 </body>
 </html>
