--- a/不呆猫全集/menu.html
+++ b/不呆猫全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB---%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-44P-89M-08-19">不呆猫 - 喜多川海梦 [44P-89M]</a></p>
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB---JK%E5%AD%A6%E5%A6%B9%E6%88%B7%E5%A4%96-59P-390MB-08-19">不呆猫 - JK学妹户外 59P 390MB</a></p>
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB---%E6%9E%81%E5%93%81%E5%8F%8C%E4%BA%BA%E7%A7%98%E4%B9%A650P1V-507MB-08-20">不呆猫 - 极品双人秘书[50P1V-507MB]</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB---%E4%BA%AE%E4%B8%9D%E7%BA%AF%E6%AC%B2%E6%95%99%E5%B8%88-59P1V222GB-08-20">不呆猫 - 亮丝纯欲教师 59P1V2.22GB</a></p>
 </body>
 </html>
