--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -20,6 +20,8 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-2-08-20">星之迟迟 2024-万圣节尾张 2</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-3-08-20">星之迟迟 2024-万圣节尾张 3</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-08-20-2">星之迟迟 2024-万圣节尾张 4</a></p>
-  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F---2024%E5%9C%A3%E8%AF%9E-180p-08-20">星之迟迟 - 2024圣诞 180p</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F---2024%E5%9C%A3%E8%AF%9E-180p-08-20">星之迟迟 - 2024圣诞 180p 1</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F---2024%E5%9C%A3%E8%AF%9E-180p-2-08-20">星之迟迟 - 2024圣诞 180p 2</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F---2024%E5%9C%A3%E8%AF%9E-180p-3-08-20">星之迟迟 - 2024圣诞 180p 3</a></p>
 </body>
 </html>
