--- a/贞子蜜桃全集/menu.html
+++ b/贞子蜜桃全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E5%85%94%E5%A5%B3%E9%83%8E62P1V-215G-08-19">贞子蜜桃 - 兔女郎[62P1V-2.15G]</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---Nikke%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-D%E6%9D%80%E6%89%8B%E5%A6%BB%E5%AD%90-08-20">贞子蜜桃 - Nikke胜利女神 D杀手妻子</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E5%A4%A7%E5%87%A4%E5%85%94%E5%A5%B3%E9%83%8E-60P1V-173GB-08-20">贞子蜜桃 - 大凤兔女郎 [60P1V-1.73GB]</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%80%A8%E4%BB%8778P1V-261G-08-20">贞子蜜桃 - 碧蓝航线 怨仇[78P1V-2.61G]</a></p>
 </body>
 </html>
