提交新资源

--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -24,5 +24,8 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%8D%A1%E8%8A%99%E5%8D%A1%E7%9D%A1%E8%A1%A334P6V-377MB-08-20">Natsuko夏夏子 - 卡芙卡睡衣[34P6V-377MB]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---Nikke%E6%99%AE%E4%B8%BD%E7%93%A6%E8%92%82-64P-475MB-08-20">Natsuko夏夏子 - Nikke普丽瓦蒂 [64P-475MB]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%BB%91%E5%B8%A6%E7%89%B9%E5%B7%A5-40P-346MB-08-20">Natsuko夏夏子 - 绑带特工 [40P-346MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%8E%84%E7%8B%BC-81P-584MB-08-20">Natsuko夏夏子 - 玄狼 [81P-584MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E4%B8%87%E5%9C%A3%E5%B0%8F%E9%AD%94%E5%A5%B352P1V-567M-08-20">Natsuko夏夏子 - 万圣小魔女[52P1V-567M]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90%E6%98%9F%E6%BE%9C---%E7%91%B6%E6%B1%A0%E6%B4%97%E5%87%9D%E8%84%82-111P2V-118G-08-20">Natsuko夏夏子&星澜 - 瑶池洗凝脂 [111P2V-1.18G]</a></p>
 </body>
 </html>
