--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -25,5 +25,7 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%86%AC%E6%97%A5%E7%94%9C%E5%BF%83-08-20">yuuhui玉汇 - 冬日甜心</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%96%84%E8%B4%A2%E5%A8%98%E5%AD%90124P-455M-%E6%B1%89%E6%9C%8D-08-20">yuuhui玉汇 - 善财娘子[124P 455M] （汉服）</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%8D%87%E8%88%B1%E6%9C%8D%E5%8A%A1-128P-2V-08-20">yuuhui玉汇 - 升舱服务 [128P 2V]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E5%8D%96%E7%81%AB%E6%9F%B4%E7%9A%84%E5%B0%8F%E5%A5%B3%E5%AD%A9-152P-1V-138GB-08-20">玉汇 - 卖火柴的小女孩 [152P-1V-1.38GB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E6%9D%80%E6%89%8B%E5%A6%BB%E5%AD%90-139P-1V-948MB-08-20">玉汇 - 杀手妻子 139P 1V 948MB</a></p>
 </body>
 </html>
