--- a/咬一口兔娘全集/menu.html
+++ b/咬一口兔娘全集/menu.html
@@ -41,5 +41,6 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E8%BE%90%E5%B0%84-%E7%81%B0%E7%83%AC%E4%BD%99%E7%94%9F74P1V-So-Crazy-08-20">咬一口兔娘 - 12月作品『辐射-灰烬余生』74P+1V So Crazy</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---%E8%AF%9E%E7%94%9F%E6%97%A5%E9%99%90%E5%AE%9A%E5%85%94%E5%AD%90%E5%91%B3%E8%9B%8B%E7%B3%95113P-3V-08-20">咬一口兔娘 - 诞生日限定『兔子味蛋糕』113P +3V</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E5%85%94%E5%85%94%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9101P1Video1V%E5%B0%8F%E8%88%9E%E8%B9%88-08-20">咬一口兔娘 - 12月作品『兔兔圣诞礼物』101P+1Video+1V小舞蹈</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E7%8B%82%E8%B5%8C%E4%B9%8B%E6%A2%A690P1Video-08-20">咬一口兔娘 - 12月作品『狂赌之梦』90P+1Video</a></p>
 </body>
 </html>
