--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -29,6 +29,9 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88-Fugue-57P81MB-08-20">水淼aqua - 25年01月 Fugue 57P81MB</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88-Fugue-57P81MB-2-08-20">水淼aqua - 25年01月 Fugue 57P81MB 2</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88fantia-%E8%92%82%E6%B3%95-67P90MB-08-20">水淼aqua - 25年01月fantia 蒂法 67P90MB</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Tier1-RuanMei-08-20">水淼Aqua - Tier1_RuanMei</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Tier2-SeikoAyase-08-20">水淼Aqua - Tier2_SeikoAyase</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Tier3-Clorinde-08-20">水淼Aqua - Tier3_Clorinde</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-12%E6%9C%88Fantia%E8%A8%82%E9%96%B1-%E7%B6%BE%E7%80%AC%E6%98%9F%E5%AD%90-08-20">水淼Aqua 12月Fantia訂閱 綾瀬星子</a></p>
 </body>
 </html>
