--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -26,5 +26,7 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%A8%83%E5%A8%83%E5%A7%AC-%E6%AD%A3%E7%89%87116P%E8%8A%B1%E7%B5%AE26P-08-20">蠢沫沫 - 娃娃姬 正片116P+花絮26P</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%9F%9C-81P-104GB-08-20">蠢沫沫 - 柜 [81P-1.04GB]</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%98%A5-08-20">蠢沫沫 - 春</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%AE%80%E6%9D%9C-148p-08-20">蠢沫沫 - 简杜 148p</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%AB%A0%E9%B1%BC-94p-08-20">蠢沫沫 - 章鱼 94p</a></p>
 </body>
 </html>
