--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -18,5 +18,9 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%98%AE%E6%A2%85-84P-121MB-08-19">雪晴Astra - 阮梅 [84P-121MB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%88%A9%E5%85%B92-08-19">雪晴Astra - 利兹2</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%9C%A3%E8%AF%9E%E8%8A%82-%E7%BA%A2%E6%A0%BC%E5%AD%9071P3V-162GB-08-20">雪晴Astra - 圣诞节 红格子[71P3V-1.62GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9BOL-62P1V139GB-08-20">雪晴Astra - 雷电将军OL 62P1V1.39GB (原神)</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E4%B8%87%E5%9C%A3%E8%8A%82-%E9%9B%85%E5%8A%AA%E6%96%AF-62P7V-183GB-08-20">雪晴Astra - 2024万圣节 雅努斯 [62P7V-1.83GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%8A%A4%E5%A3%AB%E5%88%BB%E6%99%B4-61P-4V-08-20">雪晴Astra - 2024万圣节 护士刻晴 61P 4V (原神)</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4-24%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-08-20">雪晴 24万圣节 柴郡魔术师</a></p>
 </body>
 </html>
