--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -17,5 +17,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B0%B8%E5%8A%AB%E6%97%A0%E9%97%B4-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E-33p1v-08-19">九言 - 永劫无间 不知火舞 33p1v</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%AE%B7%E7%B4%AB%E8%90%8D-42p1v-08-20">九言 - 殷紫萍 42p1v</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%AE%B6%E6%94%BF%E5%A5%B3%E4%BB%86-35p1v-08-20">九言 - 家政女仆 35p1v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%88%9E%E5%A8%98-08-20">九言 舞娘</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%9C%A3%E8%AF%9E%E7%89%B9%E5%88%8A-08-20">九言 - 圣诞特刊</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E7%8E%89%E7%8E%B2%E7%8F%91-%E4%B8%BD%E5%A8%98-34p-1v-08-20">九言 - 玉玲珑 丽娘 34p 1v</a></p>
 </body>
 </html>
