--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -18,5 +18,7 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E5%87%8B%E9%9B%B6%E6%9C%88%E5%BD%B1-08-20">屿鱼 - 凋零月影</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E9%87%91%E8%A3%85%E7%8C%AB%E7%8C%AB%E5%A4%B4-08-20">屿鱼 - 金装猫猫头</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%83%BD%E4%BB%A3-40P-08-20">屿鱼 - 能代 40P</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E7%AB%9E%E6%B3%B3-28P-108M-08-20">屿鱼 - 竞泳 [28P-108M]</a></p>
+  <p><a href="http://telegra.ph/%E5%B1%BF%E9%B1%BC---%E6%99%9A%E5%AE%89%E9%AD%94%E6%B3%95-08-20">屿鱼 - 晚安魔法</a></p>
 </body>
 </html>
