--- a/布丁全集/menu.html
+++ b/布丁全集/menu.html
@@ -20,5 +20,11 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E9%A9%AF%E9%B9%BF%E5%A7%90%E5%A7%90-08-20">布丁 - Perohub12月订阅 驯鹿姐姐</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E7%A7%98%E4%B9%A6%E7%9A%84%E5%B7%A5%E4%BD%9C-08-20">布丁 - Perohub12月订阅 秘书的工作</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E5%AE%85%E5%A5%B3%E7%9A%84%E6%97%A5%E5%B8%B8-%E5%AE%85%E5%A5%B3%E8%B4%B4%E8%B4%B4-08-20">布丁 - Perohub12月订阅 宅女的日常 宅女贴贴</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E6%BF%80%E5%87%B8%E7%99%BD%E4%B8%9D%E8%B6%B3-08-20">布丁 - 激凸&白丝足</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E4%BA%BA%E5%A6%BB%E7%9A%84%E8%AF%B1%E6%83%91-12%E6%9C%887%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-20">布丁 - 人妻的诱惑</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E6%AD%BB%E5%BA%93%E6%B0%B4-08-20">布丁 - 死库水</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E8%83%B6%E7%9A%AE%E7%8C%AB%E5%A5%B3-08-20">布丁 - 胶皮猫女</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E8%BF%9E%E4%BD%93%E7%99%BD%E4%B8%9D-08-20">布丁 - 连体白丝</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---%E9%BB%91%E8%8C%B6%E5%8D%83%E5%B1%82-08-20">布丁大法 - 黑茶千层</a></p>
 </body>
 </html>
