--- a/抱走莫子全集/menu.html
+++ b/抱走莫子全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90-%E7%90%B3%E5%A6%AE%E7%89%B9%E9%AD%94%E6%9C%AF%E5%B8%88-08-19">抱走莫子 琳妮特魔术师</a></p>
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E7%94%9F%E6%97%A5%E4%BD%9C%E6%B3%A2%E5%85%89%E7%B2%BC%E7%B2%BC-53p1v-08-19">抱走莫子 - 生日作《波光粼粼》 53p1v</a></p>
   <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E7%89%9B%E7%89%9B-41p16v-08-20">抱走莫子 - 牛牛 41p16v</a></p>
+  <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E5%9C%A3%E8%AF%9E%E5%BF%AB%E4%B9%90-08-20">抱走莫子 - 圣诞快乐</a></p>
+  <p><a href="https://telegra.ph/%E6%8A%B1%E8%B5%B0%E8%8E%AB%E5%AD%90---%E7%BA%A2%E8%89%B2%E5%B0%8F%E5%B0%BE%E5%B7%B4-120p25v-08-20">抱走莫子 - 红色小尾巴 120p25v</a></p>
 </body>
 </html>
