--- a/星澜是澜澜叫澜妹呀全集/menu.html
+++ b/星澜是澜澜叫澜妹呀全集/menu.html
@@ -17,5 +17,10 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E5%90%88%E6%AC%A2%E5%AE%97%E5%A4%A7%E5%B8%88%E5%A7%9060P1V-103G-08-20">星澜是澜澜叫澜妹呀 - 合欢宗大师姐[60P1V-1.03G]</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E5%8D%A1%E8%8E%B253P1V-796MB-08-20">星澜是澜澜叫澜妹呀 - 卡莲[53P1V-796MB]</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---NIKKE%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%A2%85%E9%87%8C%E5%85%94%E5%A5%B3%E9%83%8E-58P-458MB-08-20">星澜是澜澜叫澜妹呀 - NIKKE胜利女神 梅里兔女郎 [58P-458MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E7%9C%9F%E7%94%B1%E6%A2%A871P1V-121G-08-20">星澜是澜澜叫澜妹呀 - 真由梨[71P1V-1.21G]</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E8%A1%A5%E4%B9%A0%E8%80%81%E5%B8%88%E7%9A%84%E6%83%A9%E7%BD%9A-126P-1V118GB-08-20">星澜是澜澜叫澜妹呀 - 补习老师的惩罚 [126P-1V+1.18GB]</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E9%83%BD%E5%B8%82%E4%B9%8B%E5%A4%9C-76P1V19G-08-20">星澜是澜澜叫澜妹呀 - 都市之夜 [76P1V1.9G]</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G-08-19">云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90%E6%98%9F%E6%BE%9C---%E7%91%B6%E6%B1%A0%E6%B4%97%E5%87%9D%E8%84%82-111P2V-118G-08-20">Natsuko夏夏子&星澜 - 瑶池洗凝脂 [111P2V-1.18G]</a></p>
 </body>
 </html>
