--- a/浅安安Yuki全集/menu.html
+++ b/浅安安Yuki全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B-89P1V-1G-08-19">浅安安 - 睡前故事 [89P1V-1G]</a></p>
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E5%8D%88%E5%90%8E-08-20">浅安安 - 午后</a></p>
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89Yuki---%E6%94%BE%E8%AF%BE%E5%90%8E-08-20">浅安安Yuki - 放课后</a></p>
+  <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E6%B9%AE%E7%81%AD-70P-681MB-08-20">浅安安 - 湮灭 [70P-681MB]</a></p>
 </body>
 </html>
