--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -15,5 +15,7 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%98%A5%E6%9F%93-08-19">麻花酱 - 春染</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%86%AC%E6%97%A5%E7%B3%BB%E5%88%97-119P-6V-08-20">麻花麻花酱 - 冬日系列 [119P 6V]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1---%E9%BB%91%E4%B8%9DJK%E5%90%88%E9%9B%86-127P-5V-08-20">麻花麻花酱 - 黑丝JK合集 [127P 5V]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%A5%B3%E4%BB%86%E5%90%88%E9%9B%86%E4%BA%8C-81P2V-115GB-08-20">麻花酱 - 女仆合集二 [81P2V-1.15GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E5%A7%90%E5%A7%90%E7%B3%BB%E5%88%97-134P5V-22G-08-20">麻花酱 - 姐姐系列 [134P+5V-2.2G]</a></p>
 </body>
 </html>
