--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -9,6 +9,9 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/test-08-19-326">凉凉子 - 大凤助教 50p1v 8月12打赏群资源  Telegraph</a></p> 
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E7%97%B4%E5%A5%B3%E8%8E%AB%E5%8A%A0%E5%A4%9A%E5%B0%94-08-19">凉凉子 - 痴女莫加多尔</a></p> 
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9C%A3%E8%AF%9E%E8%8D%89%E8%8E%93%E8%9B%8B%E7%B3%95-32p10v-08-20">凉凉子 - 圣诞草莓蛋糕 32p10v</a></p>
   <p><a href="https://telegra.ph/rioko%E5%87%89%E5%87%89%E5%AD%90---Nikke%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%A2%85%E7%99%BB%E5%86%B0%E7%8E%AB%E7%91%B0-08-19">rioko凉凉子 - Nikke胜利女神 梅登冰玫瑰</a></p>  
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9F%83%E5%90%89%E5%B0%94%E5%B1%85%E5%AE%B6%E7%89%88-08-20">凉凉子 - 埃吉尔居家版</a></p>
 </body>
