--- a/Kitaro_绮太郎全集/menu.html
+++ b/Kitaro_绮太郎全集/menu.html
@@ -9,7 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E9%87%91%E6%A1%94---%E9%A3%8E%E7%BA%AA%E5%A7%94%E5%91%9855p-08-20">金桔 - 风纪委员55p</a></p>
-  <p><a href="https://telegra.ph/%E9%87%91%E6%A1%94---%E6%96%91%E7%82%B9%E7%8B%97-42p121m-08-20">金桔 - 斑点狗 [42p+121m]</a></p>
+  <p><a href="https://telegra.ph/Kitaro-%E7%BB%AE%E5%A4%AA%E9%83%8E---%E9%AD%94%E9%83%BD%E7%B2%BE%E5%85%B5%E7%9A%84%E5%A5%B4%E9%9A%B6-%E5%B1%B1%E5%9F%8E%E6%81%8B37P-322M-08-20">Kitaro_绮太郎 - 魔都精兵的奴隶 山城恋[37P-322M]</a></p>
 </body>
 </html>
