--- a/习呆呆全集/menu.html
+++ b/习呆呆全集/menu.html
@@ -9,9 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA---%E9%A9%AD%E7%A9%BA-76P-117GB-08-20">洛璃LoLiSAMA - 驭空 [76P-1.17GB]</a></p> 
-  <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83-LoLiSAMA---%E9%9A%94%E5%A3%81%E5%A4%AA%E5%A4%AA-113P-285GB-08-20">洛璃 LoLiSAMA - 隔壁太太 [113P-2.85GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%A0%E5%91%86%E5%91%86---20240716-%E6%97%B6%E9%9B%A8%E9%9B%A8%E8%A1%A3-08-20">习呆呆 - 2024.07.16 时雨雨衣</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
