--- a/咬一口兔娘全集/menu.html
+++ b/咬一口兔娘全集/menu.html
@@ -42,5 +42,18 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---%E8%AF%9E%E7%94%9F%E6%97%A5%E9%99%90%E5%AE%9A%E5%85%94%E5%AD%90%E5%91%B3%E8%9B%8B%E7%B3%95113P-3V-08-20">咬一口兔娘 - 诞生日限定『兔子味蛋糕』113P +3V</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E5%85%94%E5%85%94%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9101P1Video1V%E5%B0%8F%E8%88%9E%E8%B9%88-08-20">咬一口兔娘 - 12月作品『兔兔圣诞礼物』101P+1Video+1V小舞蹈</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---12%E6%9C%88%E4%BD%9C%E5%93%81%E7%8B%82%E8%B5%8C%E4%B9%8B%E6%A2%A690P1Video-08-20">咬一口兔娘 - 12月作品『狂赌之梦』90P+1Video</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---11%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E7%88%B1%E4%B8%BD%E4%B8%9D%E8%9B%8B%E7%B3%9557P-08-20">咬一口兔娘 - 11月月票特典『爱丽丝蛋糕』57P</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---11%E6%9C%88%E4%BD%9C%E5%93%81%E5%AF%82%E9%9D%99%E5%89%8D%E5%A4%9C82P1V-08-20">咬一口兔娘 - 11月作品『寂静前夜』82P+1V</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---11%E6%9C%88%E4%BD%9C%E5%93%81%E4%B8%8D%E8%89%AF%E5%A5%B3%E9%AB%9873P1V-%E7%9F%AD%E5%8F%91-08-20">咬一口兔娘 - 11月作品『不良女高』73P+1V 短发</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---11%E6%9C%88%E4%BD%9C%E5%93%81%E5%BE%AA%E5%BE%AA%E5%AE%88%E6%9C%88-%E7%94%98%E9%9B%A876P1V-%E6%B4%9B%E6%98%A5%E8%B5%8B%E5%8E%9F%E7%A5%9E-08-20">咬一口兔娘 - 11月作品『循循守月-甘雨』76P+1V 洛春赋(原神)</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---11%E6%9C%88%E4%BD%9C%E5%93%81%E5%90%8C%E5%B1%85%E5%A7%90%E5%A7%9075P1V-GENIE-08-20">咬一口兔娘 - 11月作品『同居姐姐』75P+1V GENIE</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E6%AC%A2%E8%BF%8E%E5%9B%9E%E5%AE%B641P1V-MrChu-08-20">咬一口兔娘 - 10月月票特典『欢迎回家』41P+1V Mr.Chu</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E9%98%81%E4%B8%AD%E5%9B%9B%E5%A6%B982P1V-%E6%97%A0%E6%83%85%E7%94%BB-08-20">咬一口兔娘 - 10月作品『阁中四妹』82P+1V 无情画</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E6%88%98%E6%96%97%E5%A5%B3%E4%BB%8676P1V-%E5%8A%A8%E6%84%9F%E5%85%89%E6%B3%A2-08-20">咬一口兔娘 - 10月作品『战斗女仆』76P+1V 动感光波</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E7%BB%9D%E5%8C%BA%E9%9B%B6-%E7%8C%AB%E5%AE%AB%E5%8F%88%E5%A5%8874P1V-ROLY-POLY-08-20">咬一口兔娘 - 10月作品『绝区零-猫宫又奈』74P+1V ROLY POLY</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%B8%80%E5%8F%A3%E5%85%94%E5%A8%98---10%E6%9C%88%E4%BD%9C%E5%93%81%E9%9B%A8%E5%90%8E%E5%B0%8F%E6%95%85%E4%BA%8B89P1V-08-20">咬一口兔娘 - 10月作品『雨后小故事』89P+1V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+			
 </body>
 </html>
