--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -20,5 +20,12 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%83%BD%E4%BB%A3-40P-08-20">屿鱼 - 能代 40P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E7%AB%9E%E6%B3%B3-28P-108M-08-20">屿鱼 - 竞泳 [28P-108M]</a></p>
   <p><a href="http://telegra.ph/%E5%B1%BF%E9%B1%BC---%E6%99%9A%E5%AE%89%E9%AD%94%E6%B3%95-08-20">屿鱼 - 晚安魔法</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E6%98%A5%E6%97%A5%E6%A4%BF-%E5%AF%BC%E6%B8%B8-08-20">屿鱼 - 蔚蓝档案 春日椿 导游</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%BE%99%E5%8D%8E%E5%A6%83%E5%92%B2%E5%85%94%E5%A5%B3%E9%83%8E-08-20">屿鱼 - 蔚蓝档案 龙华妃咲兔女郎</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---NIKKE-%E6%8B%89%E6%AF%97-30P-301MB-08-20">屿鱼 - NIKKE 拉毗 [30P-301MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E7%8F%91-50p-08-20">屿鱼 - 珑 50p</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%83%A1%E6%BB%95%E8%B5%9B%E8%BD%A6-08-20">屿鱼 - 胡滕赛车</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
