--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E9%A3%8E%E9%93%83%E5%85%AC%E4%B8%BB%E6%AE%BF%E4%B8%8B-39P-166M-08-19">桜桃喵 - 风铃公主殿下 [39P-166M]</a></p> 
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E6%95%99%E5%AE%A4%E6%AD%BB%E5%BA%93%E6%B0%B4-08-19">桜桃喵 - 教室死库水</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E7%A4%BC%E7%89%A9-40P-34203MB-08-20">桜桃喵 - 礼物 [40P-342.03MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E9%80%90%E6%B8%90%E5%8D%87%E6%B8%A9-37P2V-645MB-08-20">桜桃喵 - 逐渐升温 [37P2V-645MB]</a></p>
 </body>
 </html>
