--- a/絞肉姬Walküre全集/menu.html
+++ b/絞肉姬Walküre全集/menu.html
@@ -11,5 +11,11 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---Magia-Baiser-08-19">絞肉姬Walküre - Magia Baiser</a></p> 
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---Hoshimi-Miyabi-08-19">絞肉姬Walküre - Hoshimi Miyabi</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---Asuka-08-20">絞肉姬Walküre - Asuka</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---%E9%AA%B8%E9%9F%B3%E5%9B%9A%E4%BA%BA%E4%B8%8E%E7%BA%B8%E9%A3%9E%E6%9C%BA-08-20">絞肉姬Walküre - 骸音囚人与纸飞机</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---%E5%AE%9D%E5%A4%9A%E5%85%AD%E8%8A%B1%E6%A0%A1%E6%9C%8D-41P-08-20">絞肉姬Walküre - 宝多六花校服 41P</a></p>
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---202409-%E7%89%A7%E6%BF%91%E7%BA%A2%E8%8E%89%E6%A0%96-08-20">絞肉姬Walküre - 2024.09 牧濑红莉栖</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
