--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -28,5 +28,16 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%98%A5-08-20">蠢沫沫 - 春</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%AE%80%E6%9D%9C-148p-08-20">蠢沫沫 - 简杜 148p</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%AB%A0%E9%B1%BC-94p-08-20">蠢沫沫 - 章鱼 94p</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%B0%8F%E6%AD%87-99P-126GB-08-20">蠢沫沫 - 小歇 99P 1.26GB</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E7%94%B5%E7%AB%9E%E5%B0%91%E5%A5%B3-08-20">蠢沫沫 - 电竞少女</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%A9%9A-212p-08-20">蠢沫沫 - 婚 212p</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%9C%B2%E8%90%A5-53p-08-20">蠢沫沫 - 露营 53p</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E8%A1%AC%E8%A1%AB%E7%AA%9D-42P-606MB-08-20">蠢沫沫 - 衬衫窝 [42P-606MB]</a></p>  
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%93%B6%E9%95%9C%E4%BC%8A%E7%BB%87-08-20">蠢沫沫 - 《银镜伊织》</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E8%8A%AD%E8%95%BE%E7%8C%AB-08-20">蠢沫沫 - 芭蕾猫</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
