--- a/贝贝琪Becky全集/menu.html
+++ b/贝贝琪Becky全集/menu.html
@@ -9,9 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA---%E9%A9%AD%E7%A9%BA-76P-117GB-08-20">洛璃LoLiSAMA - 驭空 [76P-1.17GB]</a></p> 
-  <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83-LoLiSAMA---%E9%9A%94%E5%A3%81%E5%A4%AA%E5%A4%AA-113P-285GB-08-20">洛璃 LoLiSAMA - 隔壁太太 [113P-2.85GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9D%E8%B4%9D%E7%90%AABecky---%E7%A2%A7%E6%B1%A0%E7%88%B1%E6%8A%96%E9%9C%B2-40P2V-294MB-08-20">贝贝琪Becky - 碧池爱抖露 [40P2V-294MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
