--- a/鬼畜瑶在不在w全集/menu.html
+++ b/鬼畜瑶在不在w全集/menu.html
@@ -8,6 +8,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6%E5%9C%A8%E4%B8%8D%E5%9C%A8w---%E5%A5%B6%E7%89%9B-30P1V-306M-08-19">鬼畜瑶在不在w - 女仆奶牛 [30P1V-306M]</a></p> 
   <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6%E5%9C%A8%E4%B8%8D%E5%9C%A8w---%E8%B1%B9%E7%BA%B9-50P3V-460M-08-19">鬼畜瑶在不在w - 豹纹 [50P3V-460M]</a></p> 
-
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6---%E5%9E%82%E8%80%B3%E5%85%9441P2V-416MB-08-20">鬼畜瑶 - 垂耳兔[41P2V-416MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6---%E6%AF%9B%E8%A1%A3%E5%B0%8F%E5%85%94%E5%AD%9040P-327MB-08-20">鬼畜瑶 - 毛衣小兔子[40P-327MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6---%E7%A4%BC%E7%89%A9-30P-08-20">鬼畜瑶 - 礼物 30P</a></p>
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6---%E6%96%B0%E5%9B%BE-48P1V-369MB-08-20">鬼畜瑶 - 新图 [48P1V-369MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%AC%BC%E7%95%9C%E7%91%B6---%E6%97%A5%E5%B8%B8%E7%91%B631P2V-439MB-08-20">鬼畜瑶 - 日常瑶[31P2V-439MB]</a></p>
 </body>
 </html>
