--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -27,5 +27,11 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%8E%84%E7%8B%BC-81P-584MB-08-20">Natsuko夏夏子 - 玄狼 [81P-584MB]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E4%B8%87%E5%9C%A3%E5%B0%8F%E9%AD%94%E5%A5%B352P1V-567M-08-20">Natsuko夏夏子 - 万圣小魔女[52P1V-567M]</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90%E6%98%9F%E6%BE%9C---%E7%91%B6%E6%B1%A0%E6%B4%97%E5%87%9D%E8%84%82-111P2V-118G-08-20">Natsuko夏夏子&星澜 - 瑶池洗凝脂 [111P2V-1.18G]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%A7%98%E5%AF%86%E6%81%8B%E4%BA%BA-27P-1V-481MB-08-20">Natsuko夏夏子 - 秘密恋人 27P 1V 481MB</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%B4%A9%E5%9D%8F%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E5%A7%AC%E5%AD%90%E7%A4%BC%E6%9C%8D-08-20">Natsuko夏夏子 - 崩坏：星穹铁道 姬子礼服</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
+<p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
