--- a/Quan冉有点饿全集/menu.html
+++ b/Quan冉有点饿全集/menu.html
@@ -13,5 +13,14 @@
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-19">Quan冉有点饿 - 飞鸟马时</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E9%AB%98%E5%8F%89%E5%85%94%E5%A5%B3%E9%83%8E28P-116MB-08-19">Quan冉有点饿 高叉兔女郎[28P-116MB]</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E8%BE%A3%E5%A6%B9%E7%9A%84%E7%94%B7%E6%9C%8B%E5%8F%8B-78p-08-19">Quan冉有点饿 - 辣妹的男朋友 78p</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E4%B8%AD%E5%8D%8E%E5%A5%B3%E4%BB%86-43P-612MB-08-20">Quan冉有点饿 - 中华女仆 43P 612MB</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E9%95%87%E6%B5%B7%E6%97%97%E8%A2%8D-44P-975MB-08-20">Quan冉有点饿 - 镇海旗袍 44P 975MB</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E5%A4%A9%E7%AB%A5%E7%88%B1%E4%B8%BD%E4%B8%9D-%E5%90%8C%E4%BA%BA-48P-379MB-08-20">Quan冉有点饿 - 天童爱丽丝 同人 48P 379MB</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E7%94%B3%E9%B9%A4%E5%90%8C%E4%BA%BA%E7%A4%BC%E6%9C%8D-54P-475MB%E5%8E%9F%E7%A5%9E-08-20">Quan冉有点饿 - 申鹤同人礼服 54P 475MB(原神)</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E9%9D%9E%E6%9C%AC%E4%BA%BA%E5%8E%9F%E5%88%9B-51P-607MB-08-20">Quan冉有点饿 - 非本人原创 [51P-607MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
