--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -14,5 +14,6 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9C%A3%E8%AF%9E%E8%8D%89%E8%8E%93%E8%9B%8B%E7%B3%95-32p10v-08-20">凉凉子 - 圣诞草莓蛋糕 32p10v</a></p>
   <p><a href="https://telegra.ph/rioko%E5%87%89%E5%87%89%E5%AD%90---Nikke%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%A2%85%E7%99%BB%E5%86%B0%E7%8E%AB%E7%91%B0-08-19">rioko凉凉子 - Nikke胜利女神 梅登冰玫瑰</a></p>  
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9F%83%E5%90%89%E5%B0%94%E5%B1%85%E5%AE%B6%E7%89%88-08-20">凉凉子 - 埃吉尔居家版</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%A4%A7%E9%B8%AD%E9%B8%AD-50p-12v-08-20">凉凉子 - 大鸭鸭 50p 12v</a></p>
 </body>
 </html>
