--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -27,5 +27,16 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%8D%87%E8%88%B1%E6%9C%8D%E5%8A%A1-128P-2V-08-20">yuuhui玉汇 - 升舱服务 [128P 2V]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E5%8D%96%E7%81%AB%E6%9F%B4%E7%9A%84%E5%B0%8F%E5%A5%B3%E5%AD%A9-152P-1V-138GB-08-20">玉汇 - 卖火柴的小女孩 [152P-1V-1.38GB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E6%9D%80%E6%89%8B%E5%A6%BB%E5%AD%90-139P-1V-948MB-08-20">玉汇 - 杀手妻子 139P 1V 948MB</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%90%8D%E6%B5%81%E4%B9%8B%E5%A4%9C-135P-685MB-08-20">yuuhui玉汇 - 名流之夜 135P 685MB</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%B7%B4%E9%BB%8E%E6%98%A5%E6%A2%A6-139P-2V-155GB-08-20">yuuhui玉汇 - 巴黎春梦 139P 2V 1.55GB</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E6%B3%A1%E6%B2%AB%E4%B9%8B%E5%A4%8F-129P-08-20">玉汇 - 泡沫之夏 [129P]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E5%A5%B3%E4%BB%86%E6%B8%B8%E6%88%8F-147P2V-128GB-08-20">玉汇 - 女仆游戏 [147P2V-1.28GB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---PA15%E7%BF%A0%E9%9B%80%E5%AA%9A-31P-379MB-08-20">玉汇 - PA15翠雀媚 [31P-379MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E4%B8%87%E5%9C%A3%E8%8A%82%E7%89%B9%E8%BE%91-%E9%AD%94%E5%A5%B3%E7%8B%82%E6%AC%A2%E5%A4%9C-133P1V-947MB-08-20">玉汇 - 万圣节特辑 魔女狂欢夜 [133P1V-947MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---24-Vol28-%E6%9F%B3%E5%A6%82%E7%83%9F%E7%BB%88%E7%AB%A0-%E5%9B%9A-133p1v-08-20">玉汇 - 24-Vol.28 柳如烟终章-囚 133p+1v</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---%E7%8B%AC%E5%B1%85%E7%9A%84%E5%AF%A1%E5%A7%90--132P1V-%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-20">玉汇 - 独居的寡姐 [ 132P+1V ]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
