--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -20,5 +20,14 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%88%9E%E5%A8%98-08-20">九言 舞娘</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%9C%A3%E8%AF%9E%E7%89%B9%E5%88%8A-08-20">九言 - 圣诞特刊</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E7%8E%89%E7%8E%B2%E7%8F%91-%E4%B8%BD%E5%A8%98-34p-1v-08-20">九言 - 玉玲珑 丽娘 34p 1v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---ol-%E6%97%A9%E6%9C%9F%E5%AE%9A%E5%88%B6-08-20">九言 - ol 早期定制</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E9%95%BF%E7%A6%BB-30P-1V-08-20">九言 - 长离 30P 1V</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%90%BE%E5%A6%BB-08-20">九言 - 吾妻</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E4%B8%9C%E9%A3%8E%E8%88%9E%E5%B8%8C2-50p1v-08-20">九言 - 东风舞希2 50p1v</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
