--- a/伊喵君_Nya全集/menu.html
+++ b/伊喵君_Nya全集/menu.html
@@ -9,9 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AAsama---2025Vol42%E5%88%B6%E6%9C%8D%E5%A7%90%E5%A7%9071P-08-19">雪琪sama - 2025.Vol.42.制服姐姐71P</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA---%E8%BF%9E%E4%BD%93%E6%9C%BA%E6%A2%B0%E7%8C%AB58P1V-145G-08-20">雪琪SAMA - 连体机械猫[58P1V-1.45G]</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA---%E9%BB%91%E4%B8%9D%E9%95%82%E7%A9%BA%E8%A1%A3-40P4V-157GB-08-20">雪琪SAMA - 黑丝镂空衣 [40P4V-1.57GB]</a></p>
+  <p><a href="https://telegra.ph/%E4%BC%8A%E5%96%B5%E5%90%9B-Nya---%E6%A1%83%E6%99%AF%E4%B8%89%E9%85%AA%E5%8E%9F%E7%A5%9E-%E9%B8%A3%E7%A5%9E%E5%8F%8C%E4%BA%BA-%E5%85%AB%E9%87%8D%E9%9B%B7%E7%A5%9E-%E5%8F%8C%E5%80%8D%E5%BF%AB%E4%B9%90-57P1V-129GB-08-20">伊喵君_Nya - &桃景三酪《原神-鸣神双人》 八重&雷神 双倍快乐 [57P1V-1.29GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
