--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -29,5 +29,10 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---49%E5%8F%B7%E6%97%97%E8%A2%8D%E5%B9%B4-55p2v-08-20">奈汐酱nice - 49号旗袍年 55p2v</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---50%E5%8F%B7%E5%AF%B9%E8%81%94%E5%B9%B4-55p3v-08-20">奈汐酱nice - 50号对联年 55p3v</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%B5%A4%E5%B8%90%E8%88%9E-67P2V-877MB-%E6%B1%89%E6%9C%8D-08-20">奈汐酱nice - 赤帐舞 [67P2V-877MB] (汉服)</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E4%BA%A2%E9%87%91%E9%BE%99-80P1V-08-20">奈汐酱nice - 黑神话悟空 亢金龙 80P1V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
