--- a/如月灰全集/menu.html
+++ b/如月灰全集/menu.html
@@ -9,7 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E9%87%91%E6%A1%94---%E9%A3%8E%E7%BA%AA%E5%A7%94%E5%91%9855p-08-20">金桔 - 风纪委员55p</a></p>
-  <p><a href="https://telegra.ph/%E9%87%91%E6%A1%94---%E6%96%91%E7%82%B9%E7%8B%97-42p121m-08-20">金桔 - 斑点狗 [42p+121m]</a></p>
+  <p><a href="https://telegra.ph/%E5%A6%82%E6%9C%88%E7%81%B0-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF--%E5%B0%BE%E5%BC%A0-28P-325MB-08-20">如月灰 碧蓝航线 – 尾张 28P 325MB</a></p> 
 </body>
 </html>
