--- a/布丁全集/menu.html
+++ b/布丁全集/menu.html
@@ -26,5 +26,20 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E8%83%B6%E7%9A%AE%E7%8C%AB%E5%A5%B3-08-20">布丁 - 胶皮猫女</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---%E8%BF%9E%E4%BD%93%E7%99%BD%E4%B8%9D-08-20">布丁 - 连体白丝</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---%E9%BB%91%E8%8C%B6%E5%8D%83%E5%B1%82-08-20">布丁大法 - 黑茶千层</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-Perohub-10%E6%9C%88%E4%BB%BD%E5%90%88%E9%9B%86-268p-18v-1-08-20">布丁 Perohub-10月份合集 268p 18v 1</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-Perohub-10%E6%9C%88%E4%BB%BD%E5%90%88%E9%9B%86-268p-18v-2-08-20">布丁 Perohub-10月份合集 268p 18v 2</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-%E7%89%9B%E4%BB%94%E5%86%85%E8%A1%A3-08-20">布丁大法 Perohub-9月订阅 牛仔内衣</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-%E5%A7%AC%E9%87%8E%E5%89%8D%E8%BE%88-08-20">布丁大法 Perohub-9月订阅 姬野前辈</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-%E7%99%BD%E6%AF%9B%E5%A5%B3%E5%8F%8B-08-20">布丁大法 - Perohub-9月订阅 白毛女友</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95---Perohub-9%E6%9C%88%E8%AE%A2%E9%98%85-08-20">布丁大法 - Perohub 9月订阅</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
