--- a/贞子蜜桃全集/menu.html
+++ b/贞子蜜桃全集/menu.html
@@ -14,5 +14,8 @@
   <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E5%A4%A7%E5%87%A4%E5%85%94%E5%A5%B3%E9%83%8E-60P1V-173GB-08-20">贞子蜜桃 - 大凤兔女郎 [60P1V-1.73GB]</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%80%A8%E4%BB%8778P1V-261G-08-20">贞子蜜桃 - 碧蓝航线 怨仇[78P1V-2.61G]</a></p>
   <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%B0%BE%E5%BC%A0%E9%AD%94%E7%8E%8B66P1V-208G-08-20">贞子蜜桃 - 碧蓝航线 尾张魔王[66P1V-2.08G]</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%B0%BE%E5%BC%A0%E5%B1%85%E5%AE%B670P1V-315G-08-20">贞子蜜桃 - 碧蓝航线 尾张居家[70P1V-3.15G]</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E6%A2%85%E9%87%8C%E5%85%94%E5%A5%B3%E9%83%8E-73P-1V-935MB-08-20">贞子蜜桃 - 梅里兔女郎 73P 1V 935MB</a></p>
+  <p><a href="https://telegra.ph/%E8%B4%9E%E5%AD%90%E8%9C%9C%E6%A1%83---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1%E6%B3%B3%E8%A3%85-60P1V-119GB-08-20">贞子蜜桃 - 碧蓝航线 柴郡泳装 [60P1V-1.19GB]</a></p>
 </body>
 </html>
