--- a/阿薰kaOri全集/menu.html
+++ b/阿薰kaOri全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E7%81%AB%E7%A5%9E%E7%8E%9B%E8%96%87%E5%8D%A1-08-19">阿薰kaOri - 火神玛薇卡</a></p> 
   <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E5%92%8E%E7%93%A6%E5%B0%A4%E6%96%AF-08-19-2">阿薰kaOri - 咎瓦尤斯</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E8%B0%83%E6%95%99%E6%97%A5%E8%AE%B0202P18V-474GB-08-20">阿薰kaOri - 调教日记[202P18V-4.74GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E8%9C%98%E8%9B%9B%E7%B2%BE-%E5%9B%9B%E5%A6%B9-141P16V-215G-08-20">阿薰kaOri - 黑神话悟空 蜘蛛精 四妹 [141P16V-2.15G]</a></p>
 </body>
 </html>
