--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -22,5 +22,6 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E4%B8%87%E5%9C%A3%E8%8A%82-%E9%9B%85%E5%8A%AA%E6%96%AF-62P7V-183GB-08-20">雪晴Astra - 2024万圣节 雅努斯 [62P7V-1.83GB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---2024%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%8A%A4%E5%A3%AB%E5%88%BB%E6%99%B4-61P-4V-08-20">雪晴Astra - 2024万圣节 护士刻晴 61P 4V (原神)</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4-24%E4%B8%87%E5%9C%A3%E8%8A%82-%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-08-20">雪晴 24万圣节 柴郡魔术师</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A4%A7%E5%87%A4-%E9%A3%8E%E7%BA%AA%E5%A7%94%E5%91%9880P-933M-08-20">雪晴Astra - 碧蓝航线 大凤 风纪委员[80P-933M]</a></p>
 </body>
 </html>
