--- a/霜月shimo全集/menu.html
+++ b/霜月shimo全集/menu.html
@@ -9,9 +9,8 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AAsama---2025Vol42%E5%88%B6%E6%9C%8D%E5%A7%90%E5%A7%9071P-08-19">雪琪sama - 2025.Vol.42.制服姐姐71P</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA---%E8%BF%9E%E4%BD%93%E6%9C%BA%E6%A2%B0%E7%8C%AB58P1V-145G-08-20">雪琪SAMA - 连体机械猫[58P1V-1.45G]</a></p>
-  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA---%E9%BB%91%E4%B8%9D%E9%95%82%E7%A9%BA%E8%A1%A3-40P4V-157GB-08-20">雪琪SAMA - 黑丝镂空衣 [40P4V-1.57GB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9C%9C%E6%9C%88shimo--DL%E7%89%88%E5%86%99%E7%9C%9F%E9%9B%86%E9%80%B1%E6%9C%AB%E5%BD%BC%E5%A5%B3-101P-125GB-08-20">霜月shimo -「DL版写真集」週末彼女 [101P-1.25GB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
